--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Extensions Showcase</title>
+<title>Puzzling's Extensions</title>
 <style>
   body { font-family: Arial, sans-serif; background-color: #121212; color: #E0E0E0; }
   .card { margin: 20px; padding: 10px; box-shadow: 0 4px 8px 0 rgba(255,255,255,0.1); transition: 0.3s; width: 300px; display: inline-block; position: relative; background-color: #1E1E1E; }
@@ -24,7 +24,7 @@
 
 <script>
 async function fetchExtensions() {
-  const response = await fetch('https://raw.githubusercontent.com/PuzzlingGGG/puz-ext/main/extensions.json');
+  const response = await fetch('./extensions.json');
   const data = await response.json();
   displayCards(data);
 }
