--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 </head>
 <body>
 
+<h1>puz's extensions</h1>
+<p>hey there! sometimes i make extensions, and if they are good enough they go here!! so uhhh, yeah!! go look at <a href="https://puzzlingGGG.girhub.io">my main site btw</a></p>
 <div id="cards-container"></div>
 
 <script>
