--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
 <h1>puz's extensions</h1>
-<p>hey there! sometimes i make extensions, and if they are good enough they go here!! so uhhh, yeah!! go look at <a href="https://puzzlingGGG.girhub.io">my main site btw</a></p>
+<p>hey there! sometimes i make extensions, and if they are good enough they go here!! so uhhh, yeah!! go look at <a href="https://puzzlingGGG.github.io">my main site btw</a></p>
 <div id="cards-container"></div>
 
 <script>
